# slate

./: .gitignore  Cargo.toml  README.md  Rocket.toml  assets.toml  deploy
src/: eink.rs  image.rs  main.rs  octimage.rs  qr.rs  roms.rs  sim.rs  transform.rs
