[package]
name = "slate"
version = "0.1.0"
authors = ["Mitch Souders <mitch.souders@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epd-waveshare = {path="../epd-waveshare"}
#epd-waveshare = "0.5.0"
embedded-graphics = "0.7.1"
rppal = {version="0.11.3", features=["hal", "hal-unproven"], optional=true}
image = "0.23.14"
embedded-hal = {version="0.2.4", optional=true}
embedded-hal-mock = {version="0.8.0", optional=true}
qrcode = {version="0.11",  default-features = false }
gb = {git="https://github.com/crzysdrs/gb-rs", package="gb"}
zip = "0.5"
walkdir = "2"

embedded-graphics-simulator = {version="0.3.0", optional=true}
cfg-if = "1.0.0"
regex = "1.4.2"
strsim = "0.10.0"
toml = "0.5.7"
serde_derive = "1.0.118"
serde = "1.0.118"
imageproc = "0.22.0"
rand = "0.8.4"

[features]
default = ["sim"]


spi = ["rppal", "embedded-hal"]
sim = ["embedded-graphics-simulator", "embedded-hal", "embedded-hal-mock"]
